--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,11 +13,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_nfc_black_48dp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="cat.my.android.pillownfc.SampleActivity"
+            android:name="cat.my.android.pillownfc.PillowNfcSample"
             android:label="@string/title_activity_sample" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
